--- a/frontend/src/app/components/layout/canvas/canvas.component.html
+++ b/frontend/src/app/components/layout/canvas/canvas.component.html
@@ -5,7 +5,7 @@
 
     <div class="canvas-blanket" [ngClass]="{'canvas-hidden':!(asideIsActive&&popUpIsActive)}"></div>
 
-    <div class="pop-up position-absolute top-50 start-50 translate-middle" [ngClass]="{'pop-up-hidden':!popUpIsActive}"></div>
+    <div class="pop-up position-absolute top-50 start-50 translate-middle rounded-3" [ngClass]="{'pop-up-hidden':!popUpIsActive}"></div>
 
 </div>
 
