--- a/frontend/src/app/components/layout/header/header.component.html
+++ b/frontend/src/app/components/layout/header/header.component.html
@@ -1,9 +1,9 @@
 <div class="header-container w-100 d-flex flex-lg-column justify-content-between justify-content-lg-center align-items-center">
     <div class="section-title bg-primary d-flex align-items-center p-0 text-light rounded-bottom ">
         <div class="border-end text-light me-2 px-2">
-            <i class="fs-1 bi bi-bookmark"></i>
+            <i class="fs-1 {{icon}}"></i>
         </div>
-        <h4 class="text-uppercase pe-3 m-0 fw-light">CLIENTES</h4>
+        <h4 class="text-uppercase pe-3 m-0 fw-light">{{title}}</h4>
     </div>
     <div class="mt-0 mx-3">
         <app-select-data-dates></app-select-data-dates>
