--- a/frontend/src/app/components/shared/forms/form-input/form-input.component.html
+++ b/frontend/src/app/components/shared/forms/form-input/form-input.component.html
@@ -1,1 +1,6 @@
-<p>form-input works!</p>
+<div class="form-floating mb-3">
+    <input type="text" class="form-control" id="floatingInput" placeholder="Nombre">
+    <label for="floatingInput">Nombre</label>
+</div>
+
+
