--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -4,6 +4,8 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;700&display=swap');
 
+@import "../src/assets/scss/inputs.scss";
+
 @import "../node_modules/bootstrap/scss/bootstrap"; 
 
 
