--- a/frontend/src/app/components/shared/table/table.component.html
+++ b/frontend/src/app/components/shared/table/table.component.html
@@ -6,28 +6,34 @@
     </div>
   </div>
 
-  <div class="search-container">
-    <app-search [data]="data" [config]="config" (filtered)="filter($event)"></app-search>
-  </div>
-  
+  <div class="buttons-container d-flex justify-content-end">
+    <app-search *ngIf="!config.hideSearchButton" [data]="data" [dataType]="dataType" [searchProperties]="searchProperties" (filtered)="updateEntries($event)"></app-search>
+    <button *ngIf="config.extraButton" class="btn btn-{{config.extraButton.color}}" ><i class="{{config.extraButton.icon}}"></i></button>
+    <button class="btn btn-warning" *ngIf="!config.hidePlusButton"><i class="bi"></i></button>    
+  </div>  
 </div>
+
+
 <table class="table table-striped table-hover">
     <thead>
-    <tr>
-        <th scope="col">#</th>
-        <th scope="col">First</th>
-        <th scope="col">Last</th>
-        <th scope="col">Handle</th>
-    </tr>
+      <tr>
+          <th *ngFor="let column of columns; let i = index" (click)="updateSort(column, i)">{{column.title}}</th>         
+      </tr>
     </thead>
     <tbody>
-  <tr *ngFor="let item of filtered | pagination:currentPage">
-    <td *ngFor="let column of config.columns"></td>
+  <tr *ngFor="let entry of entries  |  paginate:currentPage:numOfEntries "> 
+
+        <ng-container
+          [ngTemplateOutlet]="rowTemplate"
+          [ngTemplateOutletContext]="{data: entry}"></ng-container>
+    
   </tr>
   
 </tbody>
 
 </table>
 <ul class="pagination">
-  <li class="page-item" *ngFor="let page of pages" (click)="changePage(page)"><a class="page-link" >{{page}}</a></li>    
+  <li class="page-item" *ngFor="let page of pages" (click)="currentPage=page"><a class="page-link" [ngClass]="{active:page==currentPage}">{{page}}</a></li>    
 </ul>
+
+<ng-content></ng-content>
