--- a/frontend/src/app/components/sections/reservas/reservas-section/reservas-section.component.html
+++ b/frontend/src/app/components/sections/reservas/reservas-section/reservas-section.component.html
@@ -1,4 +1,4 @@
 
 <div class="h-100 d-flex justify-content-center align-items-center">
-
+<button class="btn btn-lg btn-info" (click)="open()">TEST</button>
 </div>
