--- a/frontend/src/app/components/layout/canvas/canvas.component.html
+++ b/frontend/src/app/components/layout/canvas/canvas.component.html
@@ -2,13 +2,13 @@
 <div class="canvas-blanket" [ngClass]="{'canvas-hidden':!(asideIsActive||popUpIsActive)}">
 
     <aside [ngClass]="{'aside-hidden':!asideIsActive}">
-        <div class="slider h-100 w-100">
+        <div class="slider h-100 w-100 bg-light">
             <div class="slider-inner slides-3 h-100" [ngClass]="{slide1:aside[0],slide2:aside[1],slide3:aside[3]}">
-                <div class="slide h-100 bg-primary">
-                    <app-header-canvas [config]="aside[0]"></app-header-canvas>
+                <div class="slide h-100">
+                    <app-header-canvas [config]="aside[0]" [isFirstRoute]="true"></app-header-canvas>
                     <router-outlet name="aside-1"></router-outlet>
                 </div>
-                <div class="slide h-100 bg-secondary">
+                <div class="slide h-100 ">
                     <app-header-canvas [config]="aside[1]"></app-header-canvas>
                     <router-outlet name="aside-2"></router-outlet>
                 </div>
@@ -23,16 +23,19 @@
 
     <div class="pop-up position-absolute top-50 start-50 translate-middle rounded-3" [ngClass]="{'pop-up-hidden':!popUpIsActive}">
 
-        <div class="slider h-100 w-100">
-            <div class="slider-inner h-100" [ngClass]="{slide1:popUp[0],slide2:popUp[1],slide3:popUp[3]}">
+        <div class="slider h-100 w-100 bg-light">
+            <div class="slider-inner slides-3 h-100" [ngClass]="{slide1:popUp[0],slide2:popUp[1],slide3:popUp[3]}">
                 <div class="slide h-100">
-                    <router-outlet name="popUp-0"></router-outlet>
-                </div>
-                <div class="slide h-100">
+                    <app-header-canvas [config]="popUp[0]" [isFirstRoute]="true"></app-header-canvas>
                     <router-outlet name="popUp-1"></router-outlet>
                 </div>
                 <div class="slide h-100">
+                    <app-header-canvas [config]="popUp[1]"></app-header-canvas>
                     <router-outlet name="popUp-2"></router-outlet>
+                </div>
+                <div class="slide h-100">
+                    <app-header-canvas [config]="popUp[2]"></app-header-canvas>
+                    <router-outlet name="popUp-3"></router-outlet>
                 </div>
             </div>
         </div>
