--- a/frontend/src/app/components/sections/reservas/reservas-section/reservas-section.component.html
+++ b/frontend/src/app/components/sections/reservas/reservas-section/reservas-section.component.html
@@ -1,4 +1,5 @@
 
-<div class="h-100 d-flex justify-content-center align-items-center">
-<button class="btn btn-lg btn-info" (click)="open()">TEST</button>
+<div class="d-flex justify-content-center align-items-center pt-5">
+    <app-tabs></app-tabs>
+<!-- <button class="btn btn-lg btn-info" (click)="open()">TEST</button> -->
 </div>
