tabla component updates

--- a/frontend/src/app/components/layout/layout/layout.component.html
+++ b/frontend/src/app/components/layout/layout/layout.component.html
@@ -10,7 +10,7 @@
             </section>
             
 
-            <section id="app-sections" class="h-100 w-100">
+            <section id="app-sections" class="h-100 w-100 overflow-auto">
 
                 <header class="app-section-header">
 
@@ -18,7 +18,7 @@
 
                 </header>                
 
-                <div class="app-section-content">
+                <div class="app-section-content p-5">
 
                     <ng-content></ng-content>
 
