--- a/frontend/src/app/components/sections/inventario/inventario-section/inventario-section.component.html
+++ b/frontend/src/app/components/sections/inventario/inventario-section/inventario-section.component.html
@@ -1,3 +1,24 @@
-<div class="d-flex justify-content-center align-items-center">
-    
-</div>
+<app-table [config]="tableConfig" (buttonClick)="form()">
+    <ng-template let-data="data" #empresas>
+        <tr (click)="display(data, 'empresa')" class="pointer">
+            <td>{{data | show:'empresa':'nombre'}} </td>
+            <td>{{data | show:'empresa':'documento'}} </td>
+            <td>{{data | show:'empresa':'direccion'}} </td>
+            <td> 
+                <div><i class="bi bi-telephone me-2"></i> {{data | show:'empresa':'lista_telefonos'}}</div>
+                <div><i class="bi bi-envelope me-2"></i> {{data | show:'empresa':'lista_emails'}} </div>  
+            </td>
+        </tr>
+    </ng-template>
+    <ng-template let-data="data" #trabajadores>
+        <tr (click)="display(data,'trabajador')" class="pointer">
+            <td>{{data | show:'trabajador':'nombre_completo'}} </td>
+            <td>{{data | show:'trabajador':'documento'}} </td>
+            <td>{{data | show:'trabajador':'nombre_tipo'}} <small><em>({{data | show:'trabajador':'nombre_regimen'}} ) </em></small></td>
+            <td> 
+                <div><i class="bi bi-telephone me-2"></i> {{data | show:'trabajador':'lista_telefonos'}}</div>
+                <div><i class="bi bi-envelope me-2"></i> {{data | show:'trabajador':'lista_emails'}} </div>  
+            </td>         
+        </tr>
+    </ng-template>
+</app-table>
