--- a/frontend/src/app/components/shared/table/table.component.html
+++ b/frontend/src/app/components/shared/table/table.component.html
@@ -2,14 +2,14 @@
   <div class="table-sections">
     <div class="table-title" *ngIf="config.title">{{config.title}}</div>
     <div class="tabs" *ngIf="config.sections.length>1">
-      <app-tabs-header [titles]="sections"></app-tabs-header>
+      <app-tabs-header [titles]="sections" [selected]="currentSection" (selectedChange)="initSection($event)"></app-tabs-header>
     </div>
   </div>
 
-  <div class="buttons-container d-flex justify-content-end">
+  <div class="header-table-buttons-container d-flex justify-content-end">
     <app-search *ngIf="!config.hideSearchButton" [data]="data" [dataType]="dataType" [searchProperties]="searchProperties" (filtered)="updateEntries($event)"></app-search>
     <button *ngIf="config.extraButton" class="btn btn-{{config.extraButton.color}}" ><i class="{{config.extraButton.icon}}"></i></button>
-    <button class="btn btn-warning" *ngIf="!config.hidePlusButton"><i class="bi"></i></button>    
+    <button class="btn btn-warning button-table btn-sm" *ngIf="!config.hidePlusButton" (click)="buttonClick.emit('nuevo')"><i class="bi bi-plus h3"></i></button>    
   </div>  
 </div>
 
@@ -17,17 +17,23 @@
 <table class="table table-striped table-hover">
     <thead>
       <tr>
-          <th *ngFor="let column of columns; let i = index" (click)="updateSort(column, i)">{{column.title}}</th>         
+          <th *ngFor="let column of columns; let i = index" (click)="updateSort(column, i)" > 
+            <div class="d-flex justify-content-left align-items-stretch flex-wrap">
+              <span>{{column.title}}</span>
+              <div *ngIf="column.sort" class="d-inline-flex flex-column justify-content-center align-items-top columns-icon-container">
+                <i class="ms-2 bi bi-caret-up-fill i-sort" *ngIf="column.state!=-1 || currentSort.column!= i" ></i>
+                <i class="ms-2 bi bi-caret-down-fill i-sort" *ngIf="column.state!=1 || currentSort.column!= i"></i>
+              </div> 
+            </div>           
+          </th>         
       </tr>
     </thead>
     <tbody>
-  <tr *ngFor="let entry of entries  |  paginate:currentPage:numOfEntries "> 
-
-        <ng-container
-          [ngTemplateOutlet]="rowTemplate"
-          [ngTemplateOutletContext]="{data: entry}"></ng-container>
-    
-  </tr>
+    <ng-container *ngFor="let entry of entries  |  paginate:currentPage:numOfEntries ">
+          <ng-container
+            [ngTemplateOutlet]="rowTemplate"
+            [ngTemplateOutletContext]="{data: entry}"></ng-container>    
+    </ng-container >
   
 </tbody>
 
