--- a/frontend/src/app/components/shared/display/card-display/card-display.component.html
+++ b/frontend/src/app/components/shared/display/card-display/card-display.component.html
@@ -1,1 +1,24 @@
-<p>card-display works!</p>
+<div class="card mb-4">
+    <div class="card-header d-flex justify-content-between align-items-center bg-white">
+        <h5>{{title}}</h5>
+        <div class="d-flex">
+            <button class="ms-3 btn btn-sm btn-edit btn-warning" *ngIf="editButton" (click)="edit.emit(true)"><i class="bi bi-pencil h5 "></i></button>
+            <button class="ms-3 btn btn-sm btn-edit btn-warning" *ngIf="addButton" (click)="edit.emit(true)"><i class="bi bi-plus h5 "></i></button>
+        </div> 
+       
+    </div>
+    <div class="card-body">
+        <ng-container *ngIf="data">
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item d-flex justify-content-between align-items-center border-0 mt-3" *ngFor="let item of data">
+                    <div class="d-flex me-3">
+                        <i class="me-2 bi bi-{{item.icon}}"></i>
+                        <div class="text-capitalize">{{item.title}}:</div>
+                    </div>
+                    <small class="text-end">{{item.value || ' - '}}</small>
+                </li>                
+              </ul>
+        </ng-container>
+        <ng-content></ng-content>
+    </div>
+</div>
