--- a/frontend/src/app/components/sections/inventario/form/empresa/empresa-form.component.html
+++ b/frontend/src/app/components/sections/inventario/form/empresa/empresa-form.component.html
@@ -1,1 +1,1 @@
-<app-form [fields]="fields" [type]="type" [item]="item"></app-form>
+<app-form [fields]="fields" [type]="type" [item]="item" (save)="save($event)"></app-form>
