--- a/frontend/src/app/components/shared/form/input/input.component.html
+++ b/frontend/src/app/components/shared/form/input/input.component.html
@@ -1,11 +1,38 @@
 <ng-container
    [ngTemplateOutlet]="template"
-        [ngTemplateOutletContext]="{input:this, name: name, value:value}"></ng-container> 
+        [ngTemplateOutletContext]="{control:this, name: name, value:value, title:title, options:options}"></ng-container> 
+
         
+      
+<!-- PLANTILLAS -->
 
-
-
-<ng-template let-name="name" let-value="value" let-valid="valid" #text>
-    <label>{{name}}</label><input type="text" class="form-control" [value]="value" (input)="update($any($event.target).value)">
+<ng-template let-name="name" let-value="value" let-title="title" #text>
+    <label>{{title}}</label><input type="text" class="form-control" [value]="value" [name]="name" (input)="update($any($event.target).value)">
 </ng-template>
 
+<ng-template let-name="name" let-value="value" let-title="title" #number>
+    <label>{{title}}</label><input type="number" class="form-control" [name]="name" [value]="value" (input)="update($any($event.target).value)">
+</ng-template>
+
+<ng-template let-name="name" let-value="value" let-title="title"   let-options="options"  #select>
+    <label>{{title}}</label>
+    <select class="form-select"  (change)="update($any($event.target).value)">
+        <option class="text-center">---  selecciona un valor  ---</option>
+        <option *ngFor="let option of options"  [value]="option.value || option.name" [selected]="(option.value || option.name) == value" class="text-center">{{option.name}}</option>       
+    </select>
+</ng-template>
+
+<ng-template let-name="name" let-value="value" let-title="title"   let-options="options"  #array>
+      <app-string-array [value]="value" [title]="title" (inputChange)="update($event)"></app-string-array>
+</ng-template>
+
+<ng-template let-name="name" let-value="value" let-title="title"   let-options="options"  #array>
+    <label>{{title}}</label>
+    <app-time-picker [value]="value" [title]="title" (inputChange)="update($event)"></app-time-picker>
+</ng-template>
+
+<!-- VALIDACION  -->
+
+<div  class="invalid-feedback d-block" *ngIf="field.touched && !field.valid"><!--  pongo aqui la validaciones porque sino me las cuenta como plantilla supongo que por ng if -->
+    {{ item | errors:type:field.name }}
+</div>
