--- a/frontend/src/app/components/sections/inventario/section/inventario-section.component.html
+++ b/frontend/src/app/components/sections/inventario/section/inventario-section.component.html
@@ -41,7 +41,7 @@
                 <div><i class="bi bi-telephone me-2"></i> {{data | show:'hotel':'lista_telefonos'}}</div>
                 <div><i class="bi bi-envelope me-2"></i> {{data | show:'hotel':'lista_emails'}} </div>  
             </td>
-            <td>{{data | show:'hotel':'propietario'}} </td>
+            <td>{{data | show:'hotel':'propietario_nombre'}} </td>
         </tr>
     </ng-template>
 
