--- a/frontend/src/app/components/shared/form/input/input.component.html
+++ b/frontend/src/app/components/shared/form/input/input.component.html
@@ -7,7 +7,7 @@
 <!-- PLANTILLAS -->
 
 <ng-template let-name="name" let-value="value" let-title="title" #text>
-    <label>{{title}}</label><input type="text" class="form-control" [value]="value" [name]="name" (input)="update($any($event.target).value)">
+    <label>{{title}}</label><input type="text" class="form-control" [value]="value" [name]="name"  (input)="update($any($event.target).value);">
 </ng-template>
 
 <ng-template let-name="name" let-value="value" let-title="title" #number>
