--- a/frontend/src/app/components/sections/inventario/display/empresa/display-empresa.component.html
+++ b/frontend/src/app/components/sections/inventario/display/empresa/display-empresa.component.html
@@ -7,4 +7,13 @@
     <app-card-display title="Servicios Ofrecidos" >
         <em>FALTA</em>
     </app-card-display>
+    <footer>
+        <hr>
+    <br>
+    <div class="text-left">
+        <button class="btn btn-outline-secondary" (click)="delete()">eliminar</button>
+    </div>
+    </footer>
+
+    
 </div>
