--- a/frontend/src/app/components/sections/inventario/display/tour/display-tour.component.html
+++ b/frontend/src/app/components/sections/inventario/display/tour/display-tour.component.html
@@ -6,4 +6,11 @@
     <app-card-display title="Salidas Asociadas" >
         <em>FALTA</em>
     </app-card-display>
+    <footer>
+        <hr>
+    <br>
+    <div class="text-left">
+        <button class="btn btn-outline-secondary" (click)="delete()">eliminar</button>
+    </div>
+    </footer>
 </div>
