--- a/frontend/src/app/components/shared/modal/modal.component.html
+++ b/frontend/src/app/components/shared/modal/modal.component.html
@@ -1,4 +1,5 @@
 <div class="p-5 text-center">
+    <div><i class="bi h3 {{icon}}"></i></div>
     <h5 class="mb-4 text-center">{{message}}</h5>
     <hr>
     <button class="btn btn-primary" (click)="back()">
