--- a/frontend/src/app/components/shared/form/custom-fields/passengers-list/passengers-list.component.html
+++ b/frontend/src/app/components/shared/form/custom-fields/passengers-list/passengers-list.component.html
@@ -1,1 +1,5 @@
-<p>passengers-list works!</p>
+<div class="input-group mb-3">
+    <input type="number" class="form-control" placeholder="Adultos" aria-label="adultos" [value]="adultos" (input)="adultos=$any($event.target).value; update()">
+    <input type="number" class="form-control" placeholder="Ninos" aria-label="ninos" [value]="ninos"  (input)="ninos=$any($event.target).value;update()">
+    <input type="number" class="form-control" placeholder="Infantes" aria-label="infantes" [value]="infantes" (input)="infantes=$any($event.target).value;update()">
+</div>
