--- a/frontend/src/app/components/shared/form/custom-fields/item-picker/list/item-list.component.html
+++ b/frontend/src/app/components/shared/form/custom-fields/item-picker/list/item-list.component.html
@@ -1,6 +1,33 @@
-<ng-container [ngTemplateOutlet]="template"></ng-container> 
+<div [ngSwitch]="type" class="items-list">
+    <app-table *ngSwitchCase="'empresa'" [config]="tableConfig" (buttonClick)="form()">
+        <ng-template let-data="data" #empresas>
+            <tr (click)="display(data)" class="pointer">
+                <td>{{data | show:'empresa':'nombre'}} </td>
+                <td>{{data | show:'empresa':'documento'}} </td>
+                <td>{{data | show:'empresa':'direccion'}} </td>
+                <td> 
+                    <div><i class="bi bi-telephone me-2"></i> {{data | show:'empresa':'lista_telefonos'}}</div>
+                    <div><i class="bi bi-envelope me-2"></i> {{data | show:'empresa':'lista_emails'}} </div>  
+                </td>
+            </tr>
+        </ng-template>        
+    </app-table>
+
+    <app-table *ngSwitchCase="'tour'" [config]="tableConfig" (buttonClick)="form()">
+        <ng-template let-data="data" #tours>
+            <tr (click)="display(data,false,'tour')" class="pointer">
+                <td>{{data | show:'tour':'nombre'}} </td>
+                <td>{{data | show:'tour':'destino'}} </td>
+                <td>{{data | show:'tour':'horario_completo'}} </td>
+             </tr>
+        </ng-template>      
+    </app-table>
+   
+</div>
+
+<!-- <ng-container [ngTemplateOutlet]="template"></ng-container> 
 
 <ng-template>
     <app-empresa-list></app-empresa-list>
-</ng-template>
+</ng-template> -->
 
