cambios reserva form

--- a/frontend/src/app/components/sections/inventario/display/hotel/display-hotel.component.html
+++ b/frontend/src/app/components/sections/inventario/display/hotel/display-hotel.component.html
@@ -5,15 +5,14 @@
         </li>
     </app-card-display>
 
-    <app-card-display title="Reservas Asociadas" >
+    <!-- <app-card-display title="Reservas Asociadas" >
         <em>FALTA</em>
     </app-card-display>
     <app-card-display title="Pagos Asociados" >
         <em>FALTA</em>
-    </app-card-display>
+    </app-card-display> -->
     <footer>
-        <hr>
-    <br>
+
     <div class="text-left">
         <button class="btn btn-outline-secondary" (click)="delete()">eliminar</button>
     </div>
