--- a/frontend/src/app/components/sections/inventario/display/trabajador/display-trabajador.component.html
+++ b/frontend/src/app/components/sections/inventario/display/trabajador/display-trabajador.component.html
@@ -5,15 +5,14 @@
         </li>
     </app-card-display>
 
-    <app-card-display title="Pagos" [addButton]="true" >
+<!--     <app-card-display title="Pagos" [addButton]="true" >
         <em>FALTA</em>
     </app-card-display>
     <app-card-display title="Servicios Ofrecidos" >
         <em>FALTA</em>
-    </app-card-display>
+    </app-card-display> -->
     <footer>
-        <hr>
-    <br>
+
     <div class="text-left">
         <button class="btn btn-outline-secondary" (click)="delete()">eliminar</button>
     </div>
