--- a/frontend/src/app/components/sections/reservas/display/reservas-display.component.html
+++ b/frontend/src/app/components/sections/reservas/display/reservas-display.component.html
@@ -1,10 +1,10 @@
 <div class="p-4">
-    <app-card-display title="Cliente" [editButton]="true" (edit)="edit()">
+    <app-card-display title="Cliente" [editButton]="true" (edit)="edit(1)">
         <li app-data-item-display *ngFor="let data of dataDisplay" [icon]="data.icon" [title]="data.title" >
             {{data.value}}        
         </li>
     </app-card-display>
-    <app-card-display title="Paquete" [editButton]="true" (edit)="edit()">
+    <app-card-display title="Paquete" [editButton]="true" (edit)="edit(2)">
         <li app-data-item-display *ngFor="let data of dataPaquete" [icon]="data.icon" [title]="data.title" >
             {{data.value}}        
         </li>
@@ -13,11 +13,7 @@
     </app-card-display>
     <br>   
     
-    <app-card-display title="Precio" [editButton]="true" >
-        <em featured-data>FALTA</em>
-    </app-card-display>
     <footer>
-        <br>
         <div class="text-left">
             <button class="btn btn-outline-secondary" (click)="delete()">eliminar</button>
         </div>
