--- a/frontend/src/app/components/sections/inventario/display/empresa/display-empresa.component.html
+++ b/frontend/src/app/components/sections/inventario/display/empresa/display-empresa.component.html
@@ -5,14 +5,14 @@
             {{data.value}}        
         </li>
     </app-card-display>
-    <app-card-display title="Pagos" [addButton]="true" >
+    <!-- <app-card-display title="Pagos" [addButton]="true" >
         <em>FALTA</em>
-    </app-card-display>
-    <app-card-display title="Servicios Ofrecidos" >
+    </app-card-display> -->
+   <!--  <app-card-display title="Servicios Ofrecidos" >
         <em>FALTA</em>
-    </app-card-display>
+    </app-card-display> -->
     <footer>
-        <br>
+
         <div class="text-left">
             <button class="btn btn-outline-secondary" (click)="delete()">eliminar</button>
         </div>
