--- a/frontend/src/app/components/sections/inventario/display/tour/display-tour.component.html
+++ b/frontend/src/app/components/sections/inventario/display/tour/display-tour.component.html
@@ -4,15 +4,14 @@
             {{data.value}}        
         </li>
     </app-card-display>
-    <app-card-display title="Reservas Asociadas" >
+    <!-- <app-card-display title="Reservas Asociadas" >
         <em>FALTA</em>
     </app-card-display>
     <app-card-display title="Salidas Asociadas" >
         <em>FALTA</em>
-    </app-card-display>
+    </app-card-display> -->
     <footer>
-        <hr>
-    <br>
+
     <div class="text-left">
         <button class="btn btn-outline-secondary" (click)="delete()">eliminar</button>
     </div>
