--- a/frontend/src/app/components/sections/reservas/form/reserva/reserva-form.component.html
+++ b/frontend/src/app/components/sections/reservas/form/reserva/reserva-form.component.html
@@ -1,3 +1,3 @@
 
-    <app-step-form [type]="type" [item]="item" [fields]="[{title:'Cliente', fields:fields}, {title:'Paquete', fields:fields2}]">!</app-step-form>
+    <app-step-form [type]="type" [active]="initialStep" [item]="item" [fields]="[{title:'Cliente', fields:fields}, {title:'Paquete', fields:fields2}]">!</app-step-form>
 
